# cozy

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  config.toml.example  install-hyprland.sh  install.sh  llms.txt
docker/: Dockerfile  capture-gif.sh  capture-lightning.sh  sway.conf  verify.sh
docs/superpowers/specs/: 2026-06-18-cozy-multi-integration-monorepo-design.md  2026-06-21-weather-api-integration-design.md
integrations/: common.sh
integrations/caelestia/: cozy-session  cozy.service  install.sh
integrations/standalone/: install.sh
integrations/swww-overlay/: cozy-session  cozy-wall  install.sh
shaders/: rain.vert
shaders/effects/: cirrus.frag  classic.frag  clouds.frag  cumulonimbus.frag  cumulus.frag  droplet.frag  lightning.frag  pouring.frag  ripple.frag  sleet.frag  snow.frag  stratus.frag  sunrays.frag
src/: app.rs  config.rs  control.rs  main.rs  surface.rs
src/render/: egl.rs  gl.rs  mod.rs  texture.rs
src/weather/: mapping.rs  mod.rs  owm.rs
