[package]
name = "cozy"
version = "0.1.0"
edition = "2021"
description = "Animated rain over your Wayland wallpaper — a wlr-layer-shell client."
license = "MIT"

[dependencies]
smithay-client-toolkit = "0.19"
wayland-client = "0.31"
wayland-egl = "0.32"
khronos-egl = { version = "6", features = ["dynamic"] }
glow = "0.16"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
